--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Advent+Pro:wght@100;200;300;400;500;600;700&family=Julius+Sans+One&family=Notable&family=Oxygen:wght@300;400;700&display=swap');
 
+:root {
+  --main-color: #377084;
+}
+
 html,
 body {
   padding: 0;
