--- a/styles/hero.scss
+++ b/styles/hero.scss
@@ -4,9 +4,10 @@
 	width: 100%;
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
+	justify-content: flex-start;
 	@media only screen and (min-width: 768px) {
 		height: 490px;
+		justify-content: center;
 	}
 }
 
