--- a/styles/hero.scss
+++ b/styles/hero.scss
@@ -1,6 +1,5 @@
 .hero__container {
-	background: #ffffff url('/hero-image-desktop.jpg') center/cover no-repeat;
-	height: 252px;
+	background: #EFF3F4;
 	width: 100%;
 	display: flex;
 	flex-direction: column;
@@ -8,6 +7,7 @@
 	@media only screen and (min-width: 768px) {
 		height: 490px;
 		justify-content: center;
+		background: #ffffff url('/hero-image-desktop.jpg') center/cover no-repeat;
 	}
 }
 
@@ -18,6 +18,7 @@
 	border-radius: 50%;
 	margin: 16px;
 	z-index: 2;
+	position: absolute;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -42,11 +43,18 @@
 	}
 }
 
+.hero-img--mobile {
+	width: 100%;
+	height: 252px;
+	object-fit: cover;
+	@media only screen and (min-width: 768px) {
+		display: none;
+	}
+}
+
 .hero-card {
 	background-color: #FFFFFF;
 	width: 100%;
-	position: absolute;
-	top: 348px;
 	color: #222222;
 	box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
 	@media only screen and (min-width: 768px) {
