removed styled components and added new styles

--- a/styles/base.scss
+++ b/styles/base.scss
@@ -1,7 +1,5 @@
-.heading2--black {
-	font-family: 'Advent Pro', sans-serif;
-	font-weight: bold;
-	font-size: 32px;
-	color: #222222;
-	text-transform: uppercase;
+.home__container {
+	padding: 0px;
+	display: flex;
+	flex-direction: column;
 }
