--- a/styles/rec.scss
+++ b/styles/rec.scss
@@ -1,7 +1,48 @@
+.rec__container {
+	padding: 5% 5%;
+}
+
 .rec__heading {
 	font-family: 'Advent Pro', sans-serif;
 	font-weight: bold;
 	font-size: 32px;
 	color: #222222;
 	text-transform: uppercase;
+	margin: 0px;
+	margin-bottom: 2%;
+}
+
+.card-layout {
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+ 	grid-auto-rows: auto;
+	grid-gap: 8% 5%;
+}
+
+.card {
+	
+}
+
+.card__img-container {
+	height: 200px;
+}
+
+.card__img {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+}
+
+.card__drink-name {
+	font-family: 'Oxygen', serif;
+	font-size: 16px;
+	font-weight: 700;
+	color: #222222;
+	background-color: #ffffff;
+	box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
+	padding: 16px 12px;
+}
+
+.card__drink-name h2 {
+	margin: 0px;
 }
