--- a/styles/rec.scss
+++ b/styles/rec.scss
@@ -12,19 +12,18 @@
 	margin-bottom: 2%;
 }
 
-.card-layout {
-	display: grid;
-	grid-template-columns: repeat(3, 1fr);
- 	grid-auto-rows: auto;
-	grid-gap: 8% 5%;
-}
-
 .card {
-	
+	margin-right: 10px;
+	@media only screen and (min-width: 768px) {
+		margin-right: 20px;
+	}
 }
 
 .card__img-container {
-	height: 200px;
+	height: 150px;
+	@media only screen and (min-width: 768px) {
+		height: 200px;
+	}
 }
 
 .card__img {
@@ -35,14 +34,22 @@
 
 .card__drink-name {
 	font-family: 'Oxygen', serif;
-	font-size: 16px;
+	font-size: 12px;
 	font-weight: 700;
 	color: #222222;
 	background-color: #ffffff;
 	box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
 	padding: 16px 12px;
+	@media only screen and (min-width: 768px) {
+		font-size: 16px
+	}
 }
 
 .card__drink-name h2 {
 	margin: 0px;
+}
+
+.slick-prev:before, .slick-next:before {
+	color: #222222;
+	opacity: 1;
 }
