--- a/styles/rec.scss
+++ b/styles/rec.scss
@@ -12,10 +12,15 @@
 	margin-bottom: 2%;
 }
 
+.rec__slider {
+
+}
+
 .card {
 	margin-right: 10px;
 	@media only screen and (min-width: 768px) {
 		margin-right: 20px;
+		
 	}
 }
 
@@ -35,13 +40,19 @@
 .card__drink-name {
 	font-family: 'Oxygen', serif;
 	font-size: 12px;
+	height: 45px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	text-align: center;
 	font-weight: 700;
 	color: #222222;
 	background-color: #ffffff;
 	box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
 	padding: 16px 12px;
+	margin-bottom: 5px;
 	@media only screen and (min-width: 768px) {
-		font-size: 16px
+		font-size: 14px;
 	}
 }
 
@@ -52,4 +63,15 @@
 .slick-prev:before, .slick-next:before {
 	color: #222222;
 	opacity: 1;
+}
+
+.slick-prev {
+	left: -25px;
+}
+
+.slick-next {
+	right: -15px;
+	@media only screen and (min-width: 768px) {
+		right: -5px;
+	}
 }
