updated to get single drink page

--- a/styles/rec.scss
+++ b/styles/rec.scss
@@ -12,6 +12,10 @@
 	margin-bottom: 2%;
 }
 
+.rec__small {
+	font-size: 20px;
+}
+
 .slick-prev:before, .slick-next:before {
 	color: #222222;
 	opacity: 1;
