--- a/styles/card.scss
+++ b/styles/card.scss
@@ -20,21 +20,20 @@
 }
 
 .card__drink-name {
-	font-family: 'Oxygen', serif;
-	font-size: 12px;
+	font-family: 'Advent Pro', serif;
+	font-size: 18px;
+	text-align: center;
+	font-weight: 400;
 	height: 45px;
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	text-align: center;
-	font-weight: 700;
-	color: #222222;
 	background-color: #ffffff;
 	box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
 	padding: 16px 12px;
 	margin-bottom: 5px;
 	@media only screen and (min-width: 768px) {
-		font-size: 14px;
+		font-size: 20px;
 	}
 }
 
