--- a/styles/form.scss
+++ b/styles/form.scss
@@ -50,15 +50,16 @@
 		align-items: flex-start;
 	}
 	
-	
-	
 	label {
 		font-family: "Oxygen", sans-serif;
 		color: #555555;
-		margin: 10px -10px -10px 16px;
 		padding: 0px 5px;
 		background-color: #FFFFFF;
 		z-index: 1;
+	}
+
+	.drinkLabel {
+		margin: 10px -10px -10px 16px;
 	}
 
 	input[type="text"],
@@ -151,4 +152,8 @@
 	input[type="submit"]:hover {
 		background-color: #2c5969;
 	}
+}
+
+.hidden {
+	display: hidden;
 }
