--- a/styles/hero.scss
+++ b/styles/hero.scss
@@ -4,6 +4,7 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: flex-start;
+	cursor: pointer;
 	@media only screen and (min-width: 768px) {
 		height: 490px;
 		justify-content: center;
