--- a/styles/card.scss
+++ b/styles/card.scss
@@ -1,9 +1,8 @@
 .card {
-	margin-right: 10px;
-	margin-bottom: 30px;
+	margin: 0px 12px 32px;
 	cursor: pointer;
 	@media only screen and (min-width: 768px) {
-		margin-right: 20px;
+		margin: 12px 12px;
 	}
 }
 
@@ -47,6 +46,9 @@
 	cursor: pointer;
 }
 
-.card-width-400 {
-	width: 400px;
+.card-width-lg {
+	width: 300px; 
+	@media only screen and (min-width: 768px) {
+		width: 400px;
+	}
 }
