--- a/styles/rec.scss
+++ b/styles/rec.scss
@@ -1,7 +1,9 @@
 .rec__container {
 	padding: 0;
+	margin: 32px 0px;
 	@media only screen and (min-width: 768px) {
 		padding: 5% 7% 16px;
+		margin: 8px 0px;
 	}
 }
 
@@ -13,6 +15,7 @@
 	text-transform: uppercase;
 	margin: 0px;
 	margin-bottom: 2%;
+	padding: 16px 0px;
 }
 
 .rec__small {
