--- a/styles/nav.scss
+++ b/styles/nav.scss
@@ -1,64 +1,93 @@
 .nav__container {
-	height: 96px; 
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-	background-color: #FFFFFF;	
-	box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
-	padding: 0px 5%;
+  height: 96px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #ffffff;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
+  padding: 0px 5%;
+}
+
+.hamburger__container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  @media only screen and (min-width: 768px) {
+    display: none;
+  }
+}
+
+.hamburger__line {
+  height: 1px;
+  width: 30px;
+  background: #377084;
+  margin-bottom: 3px;
 }
 
 .logo__container {
-	display: flex;
-	cursor: pointer;
+  display: flex;
+  cursor: pointer;
 }
 
 .logo__img {
-	height: 50px;
+  height: 50px;
 }
 
 .logo__title {
-	font-family: 'Advent Pro', sans-serif;
-	font-size: 24px;
-	font-weight: 400;
-	color: #377084;
+  font-family: "Advent Pro", sans-serif;
+  font-size: 24px;
+  font-weight: 400;
+  color: #377084;
 }
 
 .btn--primary {
-	height: 40px;
-	display: flex;
-	align-items: center;
-	padding: 0px 25px;
-	margin: 0px 8px;
-	background-color: #377084;
-	border-radius: 5px;
-	color: #FFFFFF;
-	font-family: 'Advent Pro', sans-serif;
-	font-size: 16px;
-	text-decoration: none;
-	cursor: pointer;
+  display: none;
+  height: 40px;
+  align-items: center;
+  padding: 0px 16px;
+  margin: 0px 8px;
+  background-color: #377084;
+  border-radius: 5px;
+  color: #ffffff;
+  font-family: "Advent Pro", sans-serif;
+  font-size: 16px;
+  text-decoration: none;
+  cursor: pointer;
+  @media only screen and (min-width: 768px) {
+    display: flex;
+  }
 }
 
 .btn--primary:hover {
-	background-color: #215d70;
+  background-color: #215d70;
 }
 
 .nav__button-group {
-	display: flex;
-
+  display: flex;
 }
 
 .link--primary {
-	display: flex;
-	align-items: center;
-	color: #377084;
-	cursor: pointer;
-	margin-right: 16px;
-  font-size: 16px;
-  font-family: 'Advent Pro', sans-serif;
-  text-decoration: none;
+  display: none;
+  @media only screen and (min-width: 768px) {
+    display: flex;
+    align-items: center;
+    color: #377084;
+    cursor: pointer;
+    margin-right: 16px;
+    font-size: 16px;
+    font-family: "Advent Pro", sans-serif;
+    text-decoration: none;
+  }
 }
 
 .link--primary:hover {
-	text-decoration: underline
+  text-decoration: underline;
+}
+
+.mobile {
+  display: flex;
+  font-size: 48px;
+  @media only screen and (min-width: 768px) {
+    display: none;
+  }
 }
