--- a/styles/card.scss
+++ b/styles/card.scss
@@ -1,54 +1,55 @@
 .card {
-	margin: 0px 12px 32px;
-	cursor: pointer;
-	@media only screen and (min-width: 768px) {
-		margin: 12px 12px;
-	}
+  margin: 0px 12px 32px;
+  cursor: pointer;
+  @media only screen and (min-width: 768px) {
+    margin: 12px 12px;
+    width: 300px;
+  }
 }
 
 .card__img-container {
-	height: 150px;
-	@media only screen and (min-width: 768px) {
-		height: 200px;
-	}
+  height: 150px;
+  @media only screen and (min-width: 768px) {
+    height: 200px;
+  }
 }
 
 .card__img {
-	width: 100%;
-	height: 100%;
-	object-fit: cover;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .card__drink-name {
-	font-family: 'Advent Pro', serif;
-	font-size: 18px;
-	text-align: center;
-	font-weight: 400;
-	height: 45px;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	background-color: #ffffff;
-	box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
-	padding: 16px 12px;
-	margin-bottom: 5px;
-	@media only screen and (min-width: 768px) {
-		font-size: 20px;
-	}
+  font-family: "Advent Pro", serif;
+  font-size: 18px;
+  text-align: center;
+  font-weight: 400;
+  height: 45px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #ffffff;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
+  padding: 16px 12px;
+  margin-bottom: 5px;
+  @media only screen and (min-width: 768px) {
+    font-size: 20px;
+  }
 }
 
 .card__drink-link {
-	color: #222222;
-	text-decoration: none;
+  color: #222222;
+  text-decoration: none;
 }
 
 .card__link {
-	cursor: pointer;
+  cursor: pointer;
 }
 
 .card-width-lg {
-	width: 300px; 
-	@media only screen and (min-width: 768px) {
-		width: 400px;
-	}
+  width: 300px;
+  @media only screen and (min-width: 768px) {
+    width: 400px;
+  }
 }
