--- a/styles/nav.scss
+++ b/styles/nav.scss
@@ -12,6 +12,9 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  background-color: white;
+  border: 0;
+  outline: none;
   @media only screen and (min-width: 768px) {
     display: none;
   }
@@ -21,7 +24,7 @@
   height: 1px;
   width: 30px;
   background: #377084;
-  margin-bottom: 3px;
+  margin-bottom: 5px;
 }
 
 .logo__container {
