--- a/styles/drink.scss
+++ b/styles/drink.scss
@@ -129,6 +129,10 @@
 	padding-left: 0px;
 }
 
+.drink__variations a, .drink__variations a:visited, .drink__variations a:hover, .drink__variations a:active {
+	color: #377084;
+}
+
 .drink__ingNeeded {
 	background-color: #EFF3F4;
 	border: 1px solid #377084;
