--- a/styles/nav.scss
+++ b/styles/nav.scss
@@ -74,7 +74,7 @@
   @media only screen and (min-width: 768px) {
     display: flex;
     align-items: center;
-    color: #377084;
+    color: var(--main-color);
     cursor: pointer;
     margin-right: 16px;
     font-size: 16px;
